  your mail template file epgsearchupdmail.templ (s. the updated sample in the conf directory 
  and/or read the MANUAL '13. Email notification').
- new internal variables:
  * %day%, %month% and %year% which return the numeric day, month and year
    (with century) of an event
  * %chgrp% returns the VDR channel group name corresponding to an event    
- in memory to pat: french translation update, thanks to Patrice Staudt
- italian translation update, thanks to Diego Pierotto
- finnish translation update, thanks to Rolf Ahrenberg
- new SVDRP command 'MENU [NOW|PRG|SUM]' to call one of the main OSD menus or 
  the summary of the current event. If any epgsearch menu is open a subsequent
  SVDRP call will close it again.
- changed the maximum number of days for a timer conflict check from 99 to 14
- patch by Jörg Wendel for new graphtft patch
- Two events with both empty episode names are now handled different within the 
  feature 'Avoid repeats'. This will result in more recordings, but ensures not to 
  miss one only because of a buggy EPG.
- searchtimers: if a timers filename results in an empty string or contains 
  "!^invalid^!" it will be skipped for programming now.
- Avoid repeats: 'Compare subtitle' has now a third value 'if present' besides 'no'
  and 'yes'. With this setting epgsearch will classify two events only as equal if 
  their episode names match and are not empty. Caution: if your EPG data has no episode 
  names for different episodes don't use this option! 'yes' will then be the better
  choice even if this results in double recordings.
- epgsearch now uses the shutdown handler (introduced in vdr 1.5.1) to prevent a 
  search timer update to be interrupted.
- the SVDRP command UPDS for triggering search timer updates has now a new option 
  'SCAN' that will execute an EPG scan before the search timer update actually starts.
- when deleting a search timer now its list of created timers is also cleared, 
  suggested by Sundararaj Reel