@@ -191,7 +191,8 @@ a.rightspace {
 ##############################################################################
 <event>
 <table class="event">
-<tr class="event"><th class="timer">Title:</th><th class="timer">%title%</th></tr>
+<tr class="event"><th class="timer">Title:</th>
+    <th class="timer"><a href="http://localhost:8008/edit_timer.html?epgid=%liveeventid%">%title%</a></th></tr>
 <tr class="event"><td>Subtitle:</td><td>%subtitle%</td></tr>
 <tr class="event"><td>Start/End:</td><td>%time_w% %date% %time%-%timeend%</td></tr>
 <tr class="event"><td>Channel:</td><td>%chlng% (%chnr%)</td></tr>
